--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +134,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing existing output instead of doing wfl.map._map_autopara_wrappable since overwrite=False and output is done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<wfl.configset.ConfigSet at 0x7efd94591a30>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "isolated_at_fname='isolated_atoms.xtb.xyz'\n",
     "isolated_atoms = [Atoms(element, positions=[(0, 0, 0)], cell=[50, 50, 50]) for element in [\"H\", \"C\"]]\n",
@@ -174,9 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing existing output instead of doing wfl.generate.smiles._run_autopara_wrappable since overwrite=False and output is done\n"
+     ]
+    }
+   ],
    "source": [
     "all_smiles = [\n",
     "    'CC1=CCC=CC(C)=C1C(C)C', \n",
@@ -211,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -254,9 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing existing output instead of doing wfl.generate.md._sample_autopara_wrappable since overwrite=False and output is done\n"
+     ]
+    }
+   ],
    "source": [
     "def reasonable_forces(at):\n",
     "    force_comps = at.get_forces()\n",
@@ -283,9 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing existing output instead of doing wfl.descriptors.quippy._calc_autopara_wrappable since overwrite=False and output is done\n"
+     ]
+    }
+   ],
    "source": [
     "outputs = OutputSpec(\"3.ch.rdkit.md.traj.local_soap.xyz\")\n",
     "\n",
@@ -309,8 +351,7 @@
     "    outputs=outputs,\n",
     "    descs=descriptor,\n",
     "    key=descriptor_key,\n",
-    "    per_atom=True\n",
-    ")\n",
+    "    per_atom=True)\n",
     "\n",
     "def get_average_soap(at, descriptor_key):\n",
     "    at_desc = at.arrays.pop(descriptor_key)\n",
@@ -338,9 +379,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eg475/dev/workflow/wfl/select/by_descriptor.py:197: UserWarning: output is done, returning\n",
+      "  warnings.warn('output is done, returning')\n"
+     ]
+    }
+   ],
    "source": [
     "outputs = OutputSpec(\"4.ch.rdkit.md.traj.soap.cur_selection.xyz\")\n",
     "cur_selection = wfl.select.by_descriptor.CUR_conf_global(\n",
@@ -372,17 +422,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "label and save training and testing sets"
+    "Label and save training and testing sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_inputs = ConfigSet([list(processed_cur_selection)[0::2], read(isolated_at_fname, \":\")])\n",
-    "test_inputs = ConfigSet(list(processed_cur_selection)[1::2])\n",
+    "train_inputs = ConfigSet([processed_cur_selection[0::2], read(isolated_at_fname, \":\")])\n",
+    "test_inputs = ConfigSet(processed_cur_selection[1::2])\n",
     "\n",
     "def tag(at, label):\n",
     "    # let's not overwrite isolated atoms label\n",
