Fix handling of globals in pytest test_example code block exec, and improved error reporting when exec raises an exception

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -150,6 +150,7 @@
    ],
    "source": [
     "isolated_at_fname='isolated_atoms.xtb.xyz'\n",
+    "print(Atoms)\n",
     "isolated_atoms = [Atoms(element, positions=[(0, 0, 0)], cell=[50, 50, 50]) for element in [\"H\", \"C\"]]\n",
     "inputs = ConfigSet(isolated_atoms)\n",
     "\n",
@@ -754,7 +755,7 @@
     "for prop_key, prop_dict in ref_errors.items():\n",
     "    for config_key, config_dict in prop_dict.items():\n",
     "        for measure_key, val in config_dict.items():\n",
-    "            assert val == approx(errors[prop_key][config_key][measure_key])\n"
+    "            assert val == approx(errors[prop_key][config_key][measure_key]), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {errors[prop_key][config_key][measure_key]}'\n"
    ]
   },
   {
