use OutputSpec tags

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,44 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<wfl.configset.ConfigSet at 0x7f853869eb80>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "isolated_at_fname='isolated_atoms.xtb.xyz'\n",
-    "print(Atoms)\n",
     "isolated_atoms = [Atoms(element, positions=[(0, 0, 0)], cell=[50, 50, 50]) for element in [\"H\", \"C\"]]\n",
     "inputs = ConfigSet(isolated_atoms)\n",
+    "outputs=OutputSpec(isolated_at_fname, tags={\"config_type\": \"isolated_atom\"})\n",
     "\n",
     "# calculate reference energy\n",
     "isolated_atoms = generic.run(\n",
     "    inputs=inputs,\n",
-    "    outputs=OutputSpec(),\n",
+    "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
     "    properties=[\"energy\"],\n",
-    "    output_prefix=\"xtb_\"\n",
-    ")\n",
-    "\n",
-    "# set tag for fitting GAP\n",
-    "def modify_isolated_at(at):\n",
-    "    at.info[\"config_type\"] = \"isolated_atom\"\n",
-    "    return at\n",
-    " \n",
-    "wfl.map.run(\n",
-    "    inputs=isolated_atoms,\n",
-    "    outputs=OutputSpec(isolated_at_fname),\n",
-    "    map_func = modify_isolated_at)\n"
+    "    output_prefix=\"xtb_\")"
    ]
   },
   {
@@ -186,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -266,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,6 +345,7 @@
     "\n",
     "def process(at):\n",
     "    at.cell = [50, 50, 50]\n",
+    "    # For now, SOAP descriptor in atoms.info cannot be parsed by the xyz reader\n",
     "    del at.info[\"SOAP\"]\n",
     "    return at\n",
     "\n",
@@ -388,30 +367,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_inputs = ConfigSet([processed_cur_selection[0::2], read(isolated_at_fname, \":\")])\n",
+    "train_inputs = ConfigSet(processed_cur_selection[0::2])\n",
     "test_inputs = ConfigSet(processed_cur_selection[1::2])\n",
     "\n",
-    "def tag(at, label):\n",
-    "    # let's not overwrite isolated atoms label\n",
-    "    if at.info[\"config_type\"] != \"isolated_atom\":\n",
-    "        at.info[\"config_type\"] = label\n",
-    "    return at\n",
-    "\n",
-    "train_set = wfl.map.run(\n",
-    "    train_inputs,\n",
-    "    OutputSpec(train_fname),\n",
-    "    map_func = tag, \n",
-    "    args = [\"train\"])\n",
-    "\n",
-    "test_set = wfl.map.run(\n",
-    "    test_inputs,\n",
-    "    OutputSpec(test_fname),\n",
-    "    map_func = tag,\n",
-    "    args = [\"test\"])\n"
+    "OutputSpec(train_fname, tags={\"config_type\": \"train\"}).write(train_inputs)\n",
+    "OutputSpec(test_fname, tags={\"config_type\": \"test\"}).write(test_inputs)"
    ]
   },
   {
@@ -426,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,31 +464,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fitting command:\n",
-      " gap_fit gap_file=gap.xml energy_parameter_name=xtb_energy force_parameter_name=xtb_forces default_sigma={0.001 0.01 0.0 0.0} config_type_kernel_regularisation=isolated_atom:0.0001:0.0001:0.0:0.0 rnd_seed=20230301 atoms_filename=5.1.train.xyz gap={ soap=T l_max=3 n_max=6 cutoff=3 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.3 cutoff_transition_width=0.5 : soap=T l_max=3 n_max=6 cutoff=6 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.6 cutoff_transition_width=1 : distance_2b=T cutoff=7 covariance_type=ard_se delta=1 theta_uniform=1.0 sparse_method=uniform n_sparse=10 } 2>&1 > gap_fit.out \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'gap.xml'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "train_configs = ConfigSet([train_fname, isolated_at_fname])\n",
     "wfl.fit.gap.simple.run_gap_fit(\n",
-    "    fitting_configs=train_set,\n",
+    "    fitting_configs=train_configs,\n",
     "    fitting_dict=gap_params,\n",
     "    stdout_file='gap_fit.out',\n",
     "    skip_if_present=True,\n",
@@ -541,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -584,20 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<wfl.configset.ConfigSet at 0x7f84613e8f10>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "gap_calc_autopara_info = AutoparaInfo(\n",
@@ -625,52 +560,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate atomization energies\n",
-    "\n",
-    "train_set = ConfigSet(train_fn_with_gap)\n",
-    "for prop_prefix in [\"xtb_\", \"gap_\"]:\n",
-    "    train_set = atomization_energy(\n",
-    "        inputs=train_set, \n",
-    "        outputs=OutputSpec(train_fn_with_gap, overwrite=True), \n",
-    "        prop_prefix=prop_prefix) \n",
-    "\n",
-    "\n",
-    "test_set = ConfigSet([test_fn_with_gap, isolated_at_fn_with_gap])\n",
-    "for prop_prefix in [\"xtb_\", \"gap_\"]:\n",
-    "    test_set = atomization_energy(\n",
-    "        inputs=test_set, \n",
-    "        outputs=OutputSpec(test_fn_with_gap, overwrite=True), \n",
-    "        prop_prefix=prop_prefix) \n"
+    "for fn in [train_fn_with_gap, test_fn_with_gap]:\n",
+    "    configset = ConfigSet([fn, isolated_at_fn_with_gap])\n",
+    "    for prop_prefix in [\"xtb_\", \"gap_\"]:\n",
+    "        configset = atomization_energy(\n",
+    "            inputs=configset, \n",
+    "            outputs=OutputSpec([fn, isolated_at_fn_with_gap], overwrite=True), \n",
+    "            prop_prefix=prop_prefix) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      atomization_energy/a atomization_energy/a    F/c    F/c\n",
-      "                    meV/at                    #  meV/Å      #\n",
-      "test                 17.34                   50 642.83   5070\n",
-      "train                14.97                   50 621.38   5106\n",
-      "_ALL_                16.20                  100 632.16  10176\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# filter out isolated atoms for plotting purposes\n",
-    "train_set = [at for at in train_set if at.info[\"config_type\"] != \"isolated_atom\"]\n",
-    "test_set = [at for at in test_set if at.info[\"config_type\"] != \"isolated_atom\"]\n",
-    "\n",
     "# calculate errors\n",
-    "inputs = ConfigSet([train_set, test_set])\n",
+    "inputs = ConfigSet([train_fn_with_gap, test_fn_with_gap])\n",
     "errors, diffs, parity = error.calc(\n",
     "    inputs=inputs, \n",
     "    calc_property_prefix='gap_',\n",
@@ -693,29 +604,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "isolated_atoms.xtb.xyz\n",
-      "1.ch.rdkit.xyz\n",
-      "2.ch.rdkit.md.traj.xyz\n",
-      "3.ch.rdkit.md.traj.local_soap.xyz\n",
-      "4.ch.rdkit.md.traj.soap.cur_selection.xyz\n",
-      "5.1.train.xyz\n",
-      "5.2.test.xyz\n",
-      "gap.xml\n",
-      "6.1.train.gap.xyz\n",
-      "6.2.test.gap.xyz\n",
-      "gap_rmses.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from pytest import approx\n",
