--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -371,8 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_inputs = ConfigSet(processed_cur_selection[0::2])\n",
-    "test_inputs = ConfigSet(processed_cur_selection[1::2])\n",
+    "train_inputs = ConfigSet(list(processed_cur_selection[0::2]))\n",
+    "test_inputs = ConfigSet(list(processed_cur_selection[1::2]))\n",
     "\n",
     "OutputSpec(train_fname, tags={\"config_type\": \"train\"}).write(train_inputs)\n",
     "OutputSpec(test_fname, tags={\"config_type\": \"test\"}).write(test_inputs)"
