hide some cells

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {"nbsphinx":"hidden"},
    "outputs": [],
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {"nbsphinx":"hidden"},
    "outputs": [],
    "source": [
     "# set to None for github testing purposes\n",
@@ -644,7 +644,7 @@
     "        '_ALL_': {'RMSE': 0.6321592191859141, 'MAE': 0.4509735702456762, 'count': 10176},\n",
     "        'test': {'RMSE': 0.6428326175648255, 'MAE': 0.45539796313214986, 'count': 5070}}}\n",
     "\n",
-    "\n",
+    "print(errors)\n",
     "\n",
     "for prop_key, prop_dict in ref_errors.items():\n",
     "    for config_key, config_dict in prop_dict.items():\n",
