--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -87,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx":"hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
@@ -371,8 +373,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_inputs = ConfigSet(list(processed_cur_selection[0::2]))\n",
-    "test_inputs = ConfigSet(list(processed_cur_selection[1::2]))\n",
+    "train_inputs = ConfigSet(list(processed_cur_selection)[0::2])\n",
+    "test_inputs = ConfigSet(list(processed_cur_selection)[1::2])\n",
     "\n",
     "OutputSpec(train_fname, tags={\"config_type\": \"train\"}).write(train_inputs)\n",
     "OutputSpec(test_fname, tags={\"config_type\": \"test\"}).write(test_inputs)"
@@ -453,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx":"hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# set to None for github testing purposes\n",
