attempt at remote github test

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -94,7 +94,9 @@
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
     "# this cell is hidden from tutorials. \n",
-    "np.random.seed(20230301)"
+    "# np.random.seed(20230301)\n",
+    "import os\n",
+    "os.environ[\"WFL_DETERMINISTIC_HACK\"] = \"True\""
    ]
   },
   {
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +191,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RDKit doens't consistently generate the same initial structures. \n",
+    "# # For testing purposes we load structures from file\n",
+    "# # this cell is hidden from docs. \n",
+    "# from pathlib import Path\n",
+    "\n",
+    "# fn = Path(wfl.__file__).parent.resolve() / \"../tests/assets/daisy_chain_mlip_fitting.1.ch.rdkit.xyz\"\n",
+    "# smiles_configs = ConfigSet(fn)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -203,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,22 +235,20 @@
     "    \"traj_step_interval\": 5}\n",
     "\n",
     "remote_info = {\n",
-    "    \"sys_name\" : \"local\", \n",
+    "    \"sys_name\" : \"github\", \n",
     "    \"job_name\" : \"md\", \n",
     "    \"resources\" : { \n",
     "        \"max_time\" : \"15m\",\n",
-    "        \"num_cores\" : 4,\n",
-    "        \"partitions\" : \"any$\"}, \n",
-    "    \"partial_node\": True,\n",
+    "        \"num_cores\" : 2,\n",
+    "        \"partitions\" : \"standard\"}, \n",
     "    \"check_interval\": 5,\n",
-    "    \"num_inputs_per_queued_job\" :20,\n",
-    "    \"pre_cmds\" :[\"conda activate dev\"]\n",
+    "    \"num_inputs_per_queued_job\" :20\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -241,12 +256,12 @@
    "source": [
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
-    "remote_info = None\n"
+    "# remote_info = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,21 +455,19 @@
     "}\n",
     "\n",
     "remote_info = {\n",
-    "    \"sys_name\" : \"local\", \n",
+    "    \"sys_name\" : \"github\", \n",
     "    \"job_name\" : \"gap-fit\", \n",
     "    \"resources\" : { \n",
     "        \"max_time\" : \"15m\",\n",
-    "        \"num_cores\" : 4,\n",
-    "        \"partitions\" : \"any$\"}, \n",
-    "    \"partial_node\": True,\n",
+    "        \"num_cores\" : 2,\n",
+    "        \"partitions\" : \"stndard\"}, \n",
     "    \"check_interval\": 5, \n",
-    "    \"pre_cmds\" :[\"conda activate dev\"],\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -462,15 +475,34 @@
    "source": [
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
-    "remote_info = None\n",
+    "# remote_info = None\n",
     "gap_params[\"rnd_seed\"] = 20230301"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fitting command:\n",
+      " gap_fit gap_file=gap.xml energy_parameter_name=xtb_energy force_parameter_name=xtb_forces default_sigma={0.001 0.01 0.0 0.0} config_type_kernel_regularisation=isolated_atom:0.0001:0.0001:0.0:0.0 rnd_seed=20230301 atoms_filename=/tmp/_GAP_fitting_configs.f8y7ibmk.xyz gap={ soap=T l_max=3 n_max=6 cutoff=3 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.3 cutoff_transition_width=0.5 : soap=T l_max=3 n_max=6 cutoff=6 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.6 cutoff_transition_width=1 : distance_2b=T cutoff=7 covariance_type=ard_se delta=1 theta_uniform=1.0 sparse_method=uniform n_sparse=10 } 2>&1 > gap_fit.out \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'gap.xml'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_configs = ConfigSet([train_fname, isolated_at_fname])\n",
     "wfl.fit.gap.simple.run_gap_fit(\n",
@@ -491,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,21 +539,19 @@
     "resources = Resources(\n",
     "    max_time = \"15m\",\n",
     "    num_cores = 2,\n",
-    "    partitions = \"any$\")\n",
+    "    partitions = \"standard\")\n",
     "\n",
     "remote_info = RemoteInfo(\n",
-    "    sys_name = \"local\",\n",
+    "    sys_name = \"github\",\n",
     "    job_name = \"gap-eval\",\n",
     "    resources = resources,\n",
-    "    partial_node = True,\n",
     "    check_interval=10, \n",
-    "    input_files=[\"gap.xml*\"], \n",
-    "    pre_cmds = [\"conda activate dev\"])\n"
+    "    input_files=[\"gap.xml*\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -529,14 +559,25 @@
    "source": [
     "# Set remote_info to None so that this can run on GitHub CI. \n",
     "# This cell is hidden from being rendered in the docs. \n",
-    "remote_info = None"
+    "# remote_info = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<wfl.configset.ConfigSet at 0x7ff96fe5c5b0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "gap_calc_autopara_info = AutoparaInfo(\n",
@@ -564,9 +605,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      atomization_energy/a atomization_energy/a    F/c    F/c\n",
+      "                    meV/at                    #  meV/Å      #\n",
+      "test                 17.34                   50 642.83   5070\n",
+      "train                14.97                   50 621.38   5106\n",
+      "_ALL_                16.20                  100 632.16  10176\n"
+     ]
+    }
+   ],
    "source": [
     "# calculate atomization energies\n",
     "for fn in [train_fn_with_gap, test_fn_with_gap]:\n",
@@ -575,15 +628,8 @@
     "        configset = atomization_energy(\n",
     "            inputs=configset, \n",
     "            outputs=OutputSpec([fn, isolated_at_fn_with_gap], overwrite=True), \n",
-    "            prop_prefix=prop_prefix) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            prop_prefix=prop_prefix) \n",
+    "\n",
     "# calculate errors\n",
     "inputs = ConfigSet([train_fn_with_gap, test_fn_with_gap])\n",
     "errors, diffs, parity = error.calc(\n",
@@ -608,11 +654,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "nbsphinx": "hidden"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "isolated_atoms.xtb.xyz\n",
+      "1.ch.rdkit.xyz\n",
+      "2.ch.rdkit.md.traj.xyz\n",
+      "3.ch.rdkit.md.traj.local_soap.xyz\n",
+      "4.ch.rdkit.md.traj.soap.cur_selection.xyz\n",
+      "5.1.train.xyz\n",
+      "5.2.test.xyz\n",
+      "gap.xml\n",
+      "6.1.train.gap.xyz\n",
+      "6.2.test.gap.xyz\n",
+      "gap_rmses.png\n",
+      "{'atomization_energy/atom': {'train': {'RMSE': 0.014974721709943664, 'MAE': 0.012622912654433502, 'count': 50}, '_ALL_': {'RMSE': 0.016200667521092393, 'MAE': 0.012965381227920191, 'count': 100}, 'test': {'RMSE': 0.01734015472732864, 'MAE': 0.013307849801406882, 'count': 50}}, 'forces/comp': {'train': {'RMSE': 0.6213796984853067, 'MAE': 0.4465803716686252, 'count': 5106}, '_ALL_': {'RMSE': 0.6321592191859141, 'MAE': 0.4509735702456762, 'count': 10176}, 'test': {'RMSE': 0.6428326175648255, 'MAE': 0.45539796313214986, 'count': 5070}}}\n",
+      "True\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb Cell 33\u001b[0m in \u001b[0;36m<cell line: 46>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X45sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m             \u001b[39massert\u001b[39;00m val \u001b[39m==\u001b[39m approx(pred_val, \u001b[39mabs\u001b[39m\u001b[39m=\u001b[39m\u001b[39m3e-1\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMismatch for ref prop \u001b[39m\u001b[39m{\u001b[39;00mprop_key\u001b[39m}\u001b[39;00m\u001b[39m config \u001b[39m\u001b[39m{\u001b[39;00mconfig_key\u001b[39m}\u001b[39;00m\u001b[39m measure \u001b[39m\u001b[39m{\u001b[39;00mmeasure_key\u001b[39m}\u001b[39;00m\u001b[39m ref \u001b[39m\u001b[39m{\u001b[39;00mval\u001b[39m}\u001b[39;00m\u001b[39m != actual \u001b[39m\u001b[39m{\u001b[39;00mpred_val\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X45sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWFL_DETERMINISTIC_HACK\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39menviron)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X45sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from pytest import approx\n",
@@ -656,7 +733,10 @@
     "            if measure_key == \"count\":\n",
     "                continue\n",
     "            pred_val = errors[prop_key][config_key][measure_key]\n",
-    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
+    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n",
+    "\n",
+    "print(\"WFL_DETERMINISTIC_HACK\" in os.environ)\n",
+    "assert False"
    ]
   },
   {
