some debugging things

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -202,7 +202,7 @@
     "# from pathlib import Path\n",
     "\n",
     "# fn = Path(wfl.__file__).parent.resolve() / \"../tests/assets/daisy_chain_mlip_fitting.1.ch.rdkit.xyz\"\n",
-    "# smiles_configs = ConfigSet(fn)\n"
+    "# smiles_configs = ConfigSet(fn)t\n"
    ]
   },
   {
@@ -242,7 +242,9 @@
     "        \"num_cores\" : 2,\n",
     "        \"partitions\" : \"standard\"}, \n",
     "    \"check_interval\": 5,\n",
-    "    \"num_inputs_per_queued_job\" :20\n",
+    "    \"num_inputs_per_queued_job\" :20,\n",
+    "    \"pre_cmds\": ['echo \"-------------------------------------\"', \"which wfl\"],\n",
+    "    \"post_cmds\": ['echo \"_______________________________\"', \"which wfl\"]\n",
     "}\n"
    ]
   },
